# alex

./: Cargo.toml  README.md  justfile
alex/: Cargo.toml
alex/crates/alex-cli/: Cargo.toml
alex/crates/alex-server/src/: main.rs
alex/crates/alex/src/: eval.rs  lib.rs  movegen.rs  movepick.rs  position.rs  test.rs  types.rs
client/: .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Dialog.tsx  Piece.tsx  board.tsx
client/src/utils/: connect.ts  game.ts  store.ts
client/src/utils/slices/: board.ts
crates/alex/: Cargo.toml
crates/alex-cli/: Cargo.toml
crates/alex-cli/src/: main.rs
crates/alex-server/: Cargo.toml
crates/alex-server/src/: api.rs
crates/alex/src/: bitboard.rs  eval.rs  lib.rs  movegen.rs  perft.rs  position.rs  search.rs  test.rs  types.rs
server/: Cargo.toml
server/src/: api.rs  engine.rs  lib.rs  main.rs  movegen.rs
server/src/engine/: board.rs  eval.rs  movegen.rs  movepick.rs  position.rs  search.rs  test.rs  types.rs  util.rs
src/: board.rs  main.rs  movegen.rs
