[package]
name = "alex"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
